--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.8.6",
+    "axios": "^0.21.0",
     "echarts": "^4.9.0",
     "echarts-for-react": "^2.0.16",
     "lodash.clonedeep": "^4.5.0",
